fix annoying jitter on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -39,7 +39,7 @@
   color: var(--background);
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100svh;
   justify-content: flex-end;
   max-width: 1024px;
   padding: 0 1em;
